# CleanMagic-hakyll

./: CleanMagic-hakyll.cabal  LICENSE  README.md  archive.html  index.html  site.hs
_site/: about.html  contact.html
_site/posts/: 2012-08-12-spqr.html  2012-11-28-carpe-diem.html  2012-12-07-tu-quoque.html
posts/: 2012-10-07-rosa-rosa-rosam.html
templates/: archive.html  default.html  footer.html  head.html  nav.html  page.html  post-list.html  post.html
